@@ -175,27 +175,25 @@ regexp_search (char *regexp, int is_literal, int is_insensitive,
       int result = 0;
       regmatch_t m;
 
-      result = regexec (&preg, &buffer[offset], 1, &m, 0);
+      result = regexec (&preg, &buffer[offset], 1, &m, REG_NOTBOL);
       if (result == 0)
         {
-          if (m.rm_eo == 0)
-            offset++; /* Ignore empty matches. */
-          else
+          if (match_count == match_alloc)
             {
-              if (match_count == match_alloc)
-                {
-                  /* The match list is full. */
-                  if (match_alloc == 0)
-                    match_alloc = 50;
-                  matches = x2nrealloc
-                    (matches, &match_alloc, sizeof matches[0]);
-                }
-
-              matches[match_count] = m;
-              matches[match_count].rm_so += offset;
-              matches[match_count].rm_eo += offset;
-              offset = matches[match_count++].rm_eo;
+              /* The match list is full. */
+              if (match_alloc == 0)
+                match_alloc = 50;
+              matches = x2nrealloc
+                (matches, &match_alloc, sizeof matches[0]);
             }
+
+          matches[match_count] = m;
+          matches[match_count].rm_so += offset;
+          matches[match_count].rm_eo += offset;
+          offset = matches[match_count++].rm_eo;
+
+          if (m.rm_eo == 0)
+            offset++; /* Avoid finding match again for a pattern of "$". */
         }
       else
         break;
